force-app/main/default/objects/Pricing_Summary__c/Pricing_Summary__c.object-meta.xml
<CustomObject>
    <label>Pricing Summary</label>
    <nameField>
        <displayFormat>PS-{00000000}</displayFormat>
        <label>Pricing Summary Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pricing Summaries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>