force-app/main/default/objects/Pricing_Summary__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pricing Summaries</relationshipLabel>
    <relationshipName>Pricing_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>