force-app/main/default/objects/Pricing_Summary__c/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <description>L5 AccountNumber/BusinessId - Lookup Attribute for Factory Price, Product Cost and Sales Price</description>
    <inlineHelpText>Lookup Attribute for Factory Price, Product Cost and Sales Price</inlineHelpText>
    <label>Account Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>