force-app/main/default/objects/Pricing_Summary__c/fields/Business_Type__c.field-meta.xml
<CustomField>
    <fullName>Business_Type__c</fullName>
    <description>L2 Business Type - Lookup Attribute for Factory Price, Product Cost and Sales Price</description>
    <inlineHelpText>Lookup Attribute for Factory Price, Product Cost and Sales Price</inlineHelpText>
    <label>Business Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lumon_Business_Types</valueSetName>
    </valueSet>
</CustomField>