force-app/main/default/objects/Pricing_Summary__c/fields/Configuration_Plan__c.field-meta.xml
<CustomField>
    <fullName>Configuration_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Configuration Plan</label>
    <referenceTo>Configuration__c</referenceTo>
    <relationshipName>PricingSummaries</relationshipName>
    <type>Lookup</type>
</CustomField>