force-app/main/default/objects/Pricing_Summary__c/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <description>L1 Country - Lookup Attribute for Factory Price, Product Cost and Sales Price</description>
    <inlineHelpText>Lookup Attribute for Factory Price, Product Cost and Sales Price</inlineHelpText>
    <label>Country Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lumon_Countries</valueSetName>
    </valueSet>
</CustomField>