force-app/main/default/objects/Pricing_Summary__c/fields/District__c.field-meta.xml
<CustomField>
    <fullName>District__c</fullName>
    <description>L3 District - Lookup Attribute for Factory Price, Product Cost and Sales Price</description>
    <inlineHelpText>Lookup Attribute for Factory Price, Product Cost and Sales Price</inlineHelpText>
    <label>District</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lumon_Districts</valueSetName>
    </valueSet>
</CustomField>