force-app/main/default/objects/Pricing_Summary__c/fields/Group_Level__c.field-meta.xml
<CustomField>
    <fullName>Group_Level__c</fullName>
    <description>Defines the group level:
Group level 1: Product Group
Group level 2: Cost Type</description>
    <inlineHelpText>Group level 1: Product Group
Group level 2: Cost Type</inlineHelpText>
    <label>Group Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Product_Group</fullName>
                <label>Product Group</label>
            </value>
            <value>
                <fullName>Cost_Type</fullName>
                <label>Cost Type</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>