force-app/main/default/objects/Pricing_Summary__c/fields/Office__c.field-meta.xml
<CustomField>
    <fullName>Office__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Office</label>
    <referenceTo>Office__c</referenceTo>
    <relationshipLabel>Pricing Summaries</relationshipLabel>
    <relationshipName>Pricing_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>