force-app/main/default/objects/Pricing_Summary__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipName>PricingSummaries</relationshipName>
    <type>Lookup</type>
</CustomField>