force-app/main/default/objects/Pricing_Summary__c/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <description>L0 Organization - Lookup Attribute for Factory Price, Product Cost and Sales Price</description>
    <inlineHelpText>Lookup Attribute for Factory Price, Product Cost and Sales Price</inlineHelpText>
    <label>Organization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lumon_Organizations</valueSetName>
    </valueSet>
</CustomField>