force-app/main/default/objects/Pricing_Summary__c/fields/PriceBookId__c.field-meta.xml
<CustomField>
    <fullName>PriceBookId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Pricing Summaries</relationshipLabel>
    <relationshipName>Pricing_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>