force-app/main/default/objects/Pricing_Summary__c/fields/Pricing_Changes__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Changes__c</fullName>
    <description>Pricing changes done by the user in JSON format</description>
    <inlineHelpText>Pricing changes done by the user in JSON format. Do not edit manually.</inlineHelpText>
    <label>Pricing Changes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>