force-app/main/default/objects/Pricing_Summary__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to User to Control Visibility</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Pricing_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>